--- a/welcome-mail.html
+++ b/welcome-mail.html
@@ -68,12 +68,32 @@
         width: 100% !important;
         max-width: 100%;
       }
+
+      .mj-column-per-60 {
+        width: 60% !important;
+        max-width: 60%;
+      }
+
+      .mj-column-per-12 {
+        width: 12% !important;
+        max-width: 12%;
+      }
     }
   </style>
   <style media="screen and (min-width:480px)">
     .moz-text-html .mj-column-per-100 {
       width: 100% !important;
       max-width: 100%;
+    }
+
+    .moz-text-html .mj-column-per-60 {
+      width: 60% !important;
+      max-width: 60%;
+    }
+
+    .moz-text-html .mj-column-per-12 {
+      width: 12% !important;
+      max-width: 12%;
     }
   </style>
   <style type="text/css">
@@ -101,7 +121,18 @@
     .content {
       padding: 24px;
       border: 1px solid black;
-      border-radius: 20px;
+      border-bottom: none;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      background-color: #F7F5EE;
+    }
+
+    .content1 {
+      padding: 24px;
+      border: 1px solid black;
+      border-top: none;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
       background-color: #F7F5EE;
     }
 
@@ -212,6 +243,135 @@
                                                 <tr>
                                                   <td style="width:552px;">
                                                     <img height="auto" src="https://drive.google.com/uc?export=view&id=1UY8Nbyfs97HnZ3LoVdksme7HfnwjOKed" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="552" />
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <!--[if mso | IE]></td></tr></table><![endif]-->
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="content1-outlook" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="content1-outlook" style="width:552px;" width="552" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                <div class="content1" style="margin:0px auto;max-width:552px;">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                    <tbody>
+                      <tr>
+                        <td style="direction:ltr;font-size:0px;padding:0;text-align:center;">
+                          <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:331.2px;" ><![endif]-->
+                          <div class="mj-column-per-60 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="vertical-align:top;padding:0;">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                      <tbody>
+                                        <tr>
+                                          <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                                            <div style="font-family:IBM Plex Sans,vsans-serif;font-size:13px;font-style:normal;line-height:1;text-align:left;color:#000000;">
+                                              <p>
+                                                <strong>CEE you soon!</strong>
+                                                <br>
+                                                <br>
+                                                <strong>LIFT99 Kyiv Team</strong>
+                                              </p>
+                                            </div>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:66.24px;" ><![endif]-->
+                          <div class="mj-column-per-12 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:middle;width:100%;">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="vertical-align:middle;padding:6px;">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
+                                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                              <tbody>
+                                                <tr>
+                                                  <td style="width:48px;">
+                                                    <a href="#" target="_blank">
+                                                      <img height="auto" src="https://drive.google.com/uc?export=view&id=1lWTnkn1mpQlWhZUwD93b6Bio2_MgqBdA" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
+                                                    </a>
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:66.24px;" ><![endif]-->
+                          <div class="mj-column-per-12 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="vertical-align:top;padding:6px;">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
+                                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                              <tbody>
+                                                <tr>
+                                                  <td style="width:48px;">
+                                                    <a href="#" target="_blank">
+                                                      <img height="auto" src="https://drive.google.com/uc?export=view&id=1TKB1QFMBE3f4LliMtnuZLQHdIigdXZJA" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
+                                                    </a>
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:66.24px;" ><![endif]-->
+                          <div class="mj-column-per-12 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="vertical-align:top;padding:6px;">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
+                                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                              <tbody>
+                                                <tr>
+                                                  <td style="width:48px;">
+                                                    <a href="#" target="_blank">
+                                                      <img height="auto" src="https://drive.google.com/uc?export=view&id=1IdfNQVKrOXWnzD1SfAh0eaiVjEkunqrr" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
+                                                    </a>
                                                   </td>
                                                 </tr>
                                               </tbody>
