All Links + UA version

--- a/welcome-mail (ua).html
+++ b/welcome-mail (ua).html
@@ -118,6 +118,15 @@
       margin: 0 !important;
     }
 
+    a {
+      text-decoration: none;
+      color: #6267DC;
+    }
+
+    a:hover {
+      color: #6267DC;
+    }
+
     .content {
       padding: 24px;
       border: 1px solid black;
@@ -219,14 +228,14 @@
                                         <tr>
                                           <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
                                             <div style="font-family:IBM Plex Sans,vsans-serif;font-size:13px;font-style:normal;line-height:1;text-align:left;color:#000000;">
-                                              <p> This day will go down in history as the day when you made the right choice to join LIFT99 Community. Now, let’s onboard you in three steps, <strong>please go through them today.</strong>
+                                              <p> Цей день ти згадуватимеш як найкращий день життя, бо саме відсьогодні ти — частина ком'юніті LIFT99. Щоб заонбордитися, потрібно зробити 3 кроки. <strong>Перший — зроби,будь ласка, сьогодні.</strong>
                                                 <br>
-                                                <br> You have already received invite links via email to these three systems, go ahead and register: <br>
-                                                <br> 1. <strong>Slack</strong> (members communication, events announcements & Hub Alerts) <br>
-                                                <br> 2. <strong>Salto KS</strong> (card-less access system) <br>
-                                                <br> 3. <strong>OfficeRnD</strong> (room booking tools & members info tool). In case you have any problems, please watch <strong>this 7-minute video</strong>. Press “Sign In” button at the end of the email - to register. <br>
-                                                <br> By the way, you can bring your friend and get a discount on their and your membership :) <br>
-                                                <br> Here’s LIFT99 onboarding checklist, where you can find more details about LIFT99. Please read it and follow the steps.
+                                                <br> Ти вже отримав електронною поштою посилання-запрошення до трьох систем, переходь до реєстрації: <br>
+                                                <br> 1. <strong>Slack</strong> (спілкування учасників, анонси подій та сповіщення хабу) <br>
+                                                <br> 2. <strong>Salto KS</strong> (система безкарткового доступу) <br>
+                                                <br> 3. <strong>OfficeRnD</strong> (інструменти для бронювання номерів та інформування учасників). У разі виникнення проблем, будь ласка, перегляньте <a href="https://www.youtube.com/watch?v=VtW9HXU2Ub4&feature=youtu.be">this 7-minute video</a>. Натисни кнопку Sign In в кінці цього імейла, щоб зареєструватись. <br>
+                                                <br> До речі, ти можеш привести друга та отримати знижку на свій та його мембершип :) <br>
+                                                <br> Ось <a href="https://docs.google.com/document/d/1twfjpLcnKC56CscG6SeF_l7qPasK7Y-wFwTTjMZibxo/edit">фінальний чеклист</a> LIFT99, де можна знайти більш детальну інформацію про нас. ПБудь ласка, виконай всі пункти звідти.
                                               </p>
                                             </div>
                                           </td>
@@ -280,10 +289,10 @@
                                           <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
                                             <div style="font-family:IBM Plex Sans,vsans-serif;font-size:13px;font-style:normal;line-height:1;text-align:left;color:#000000;">
                                               <p>
-                                                <strong>CEE you soon!</strong>
+                                                <strong>Побачимося дуже скоро!</strong>
                                                 <br>
                                                 <br>
-                                                <strong>LIFT99 Kyiv Team</strong>
+                                                <strong>Команда LIFT99 Kyiv</strong>
                                               </p>
                                             </div>
                                           </td>
@@ -309,7 +318,7 @@
                                               <tbody>
                                                 <tr>
                                                   <td style="width:48px;">
-                                                    <a href="#" target="_blank">
+                                                    <a href="https://www.facebook.com/LIFT99KyivHub" target="_blank">
                                                       <img height="auto" src="https://drive.google.com/uc?export=view&id=1lWTnkn1mpQlWhZUwD93b6Bio2_MgqBdA" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
                                                     </a>
                                                   </td>
@@ -339,7 +348,7 @@
                                               <tbody>
                                                 <tr>
                                                   <td style="width:48px;">
-                                                    <a href="#" target="_blank">
+                                                    <a href="https://www.instagram.com/lift99kyivhub/" target="_blank">
                                                       <img height="auto" src="https://drive.google.com/uc?export=view&id=1TKB1QFMBE3f4LliMtnuZLQHdIigdXZJA" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
                                                     </a>
                                                   </td>
@@ -369,7 +378,7 @@
                                               <tbody>
                                                 <tr>
                                                   <td style="width:48px;">
-                                                    <a href="#" target="_blank">
+                                                    <a href="https://t.me/LIFT99KyivHub" target="_blank">
                                                       <img height="auto" src="https://drive.google.com/uc?export=view&id=1IdfNQVKrOXWnzD1SfAh0eaiVjEkunqrr" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
                                                     </a>
                                                   </td>
